[hotfix/style/card] Fix card layout distortion when title exceeds one line

--- a/src/pages/MainPage.module.scss
+++ b/src/pages/MainPage.module.scss
@@ -119,8 +119,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 80px;
-  height: 60vh;
+  margin-top: 70px;
+  height: 75vh;
   width: 80%;
 }
 .titleContainer {
@@ -173,10 +173,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
   position: relative;
 }
 
 .cardsWrapper {
+  height: 100%;
   width: 100%;
   overflow: hidden;
   position: relative;
